[gd_scene load_steps=31 format=3 uid="uid://c76kqdervowc5"]

[ext_resource type="PackedScene" uid="uid://c02bm6vhclraa" path="res://character/entity/entity.tscn" id="1_gp5ur"]
[ext_resource type="PackedScene" uid="uid://b5an3p11uidjl" path="res://collisionbox/hurtbox/player_hurtbox.tscn" id="2_nonjc"]
[ext_resource type="Script" path="res://scripts/character/entity/player/player.gd" id="2_twsf0"]
[ext_resource type="Script" path="res://scripts/character/entity/player/weapon.gd" id="3_7kpxh"]
[ext_resource type="Texture2D" uid="uid://eis7cusnmhio" path="res://texture/character/entity/player/tank.png" id="3_giwix"]
[ext_resource type="Texture2D" uid="uid://bqk0s6js2v1q1" path="res://texture/ui/hud/key_icon.png" id="4_o0t0u"]
[ext_resource type="Script" path="res://scripts/camera/shaky_camera.gd" id="5_syllx"]
[ext_resource type="AnimationNodeStateMachine" uid="uid://dq75qdq1t3txp" path="res://Player.tres" id="6_if7x0"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="7_275eu"]
[ext_resource type="Material" uid="uid://sjjqo1h8i8hp" path="res://particle/firefly.tres" id="7_kfx5y"]
[ext_resource type="PackedScene" uid="uid://daqytvy7sw1uw" path="res://light/player_light.tscn" id="7_sa0mf"]
[ext_resource type="Texture2D" uid="uid://dvckjfms2if3c" path="res://texture/particle/firefly.png" id="8_4gh67"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="8_doywg"]
[ext_resource type="Script" path="res://scripts/ui/firefly.gd" id="9_1glqv"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="9_y2so8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xdyhc"]
size = Vector2(22, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xf8sv"]
size = Vector2(20, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_hbl5s"]
atlas = ExtResource("4_o0t0u")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_duuhs"]
atlas = ExtResource("4_o0t0u")
region = Rect2(8, 0, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_q5stj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbl5s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_duuhs")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="Animation" id="Animation_jl7eq"]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4m0qe"]
_data = {
"RESET": SubResource("Animation_jl7eq")
}

[sub_resource type="Animation" id="Animation_o4y7v"]
resource_name = "idle"
length = 1.5
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Player/Texture/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [7, 8, 9]
}

[sub_resource type="Animation" id="Animation_lrguk"]
resource_name = "walk"
length = 0.6
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Player/Texture/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qkebf"]
_data = {
"idle": SubResource("Animation_o4y7v"),
"walk": SubResource("Animation_lrguk")
}

[sub_resource type="Animation" id="Animation_g0wi7"]
resource_name = "idle"
length = 1.5
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Player/Texture/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_dm722"]
resource_name = "walk"
length = 0.6
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Player/Texture/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [3, 4, 5, 6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pl718"]
_data = {
"idle": SubResource("Animation_g0wi7"),
"walk": SubResource("Animation_dm722")
}

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_jcyqg"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_smdr3"]
graph_offset = Vector2(-381.647, 76.6132)
nodes/AnimationNodeStateMachine/node = ExtResource("6_if7x0")
nodes/AnimationNodeStateMachine/position = Vector2(-180, 140)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_jcyqg")
nodes/TimeScale/position = Vector2(120, 140)
node_connections = [&"TimeScale", 0, &"AnimationNodeStateMachine", &"output", 0, &"TimeScale"]

[node name="Player" node_paths=PackedStringArray("interactable_with") instance=ExtResource("1_gp5ur")]
collision_layer = 4
collision_mask = 9
script = ExtResource("2_twsf0")
interactable_with = []
direction = Vector2(0, 0)
move_direction = Vector2(0, 0)
old_move_direction = Vector2(0, 0)
knockback_power = 3000
move_speed_multiple = 1.0
current_move_speed = 0
current_endurance = 0
endurance_recover_amount = 10
endurance_recover_ready = 1
endurance_recover_speed = 0.2
endurance_recover_ready_speed = 0.5

[node name="Body" parent="Texture" index="0"]
z_index = 1
texture = ExtResource("3_giwix")
hframes = 7
vframes = 2

[node name="PlayerHurtbox" parent="." index="2" instance=ExtResource("2_nonjc")]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHurtbox" index="3"]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_xdyhc")

[node name="NavArea" type="Area2D" parent="." index="3"]
visible = false
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="NavArea" index="0"]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_xf8sv")

[node name="Weapon" type="Node2D" parent="." index="4"]
script = ExtResource("3_7kpxh")

[node name="InteractionIcon" type="AnimatedSprite2D" parent="." index="5"]
z_index = 1
position = Vector2(0, -32)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_q5stj")
autoplay = "default"

[node name="EnduranceRecoverTimer" type="Timer" parent="." index="7"]
one_shot = true

[node name="EndRecoverReadyTimer" type="Timer" parent="." index="8"]
one_shot = true

[node name="RunEnduranceConsumeTimer" type="Timer" parent="." index="9"]
wait_time = 0.02
one_shot = true

[node name="PlayerLight" parent="." index="10" instance=ExtResource("7_sa0mf")]
visible = false

[node name="Firefly" type="GPUParticles2D" parent="." index="11"]
emitting = false
amount = 3
process_material = ExtResource("7_kfx5y")
texture = ExtResource("8_4gh67")
lifetime = 6.0
randomness = 1.0
draw_order = 0
script = ExtResource("9_1glqv")

[node name="Camera2D" type="Camera2D" parent="." index="12"]
zoom = Vector2(2, 2)
script = ExtResource("5_syllx")

[node name="StatePlayer" parent="." index="13"]
libraries = {
"": SubResource("AnimationLibrary_4m0qe"),
"back": SubResource("AnimationLibrary_qkebf"),
"front": SubResource("AnimationLibrary_pl718")
}

[node name="AnimationTree" type="AnimationTree" parent="." index="15"]
tree_root = SubResource("AnimationNodeBlendTree_smdr3")
advance_expression_base_node = NodePath("../StatePlayer")
anim_player = NodePath("../StatePlayer")
parameters/AnimationNodeStateMachine/conditions/is_dodge = false
parameters/AnimationNodeStateMachine/conditions/is_idle = false
parameters/AnimationNodeStateMachine/conditions/is_walk = false
parameters/AnimationNodeStateMachine/dodge/blend_position = Vector2(0, 0)
parameters/AnimationNodeStateMachine/idle/blend_position = Vector2(-0.488525, 0.194952)
parameters/AnimationNodeStateMachine/walk/blend_position = Vector2(0, 0)
parameters/TimeScale/scale = 1.0

[node name="WalkStack" type="Node" parent="StateChart/CompoundState" index="3"]
script = ExtResource("7_275eu")
initial_state = NodePath("Walk")

[node name="Walk" type="Node" parent="StateChart/CompoundState/WalkStack" index="0"]
script = ExtResource("8_doywg")

[node name="Run" type="Node" parent="StateChart/CompoundState/WalkStack" index="1"]
script = ExtResource("8_doywg")

[node name="Attack" type="Node" parent="StateChart/CompoundState" index="4"]
script = ExtResource("7_275eu")
initial_state = NodePath("WeaponAttack")

[node name="WeaponAttack" type="Node" parent="StateChart/CompoundState/Attack" index="0"]
script = ExtResource("8_doywg")

[node name="ToWalk" type="Node" parent="StateChart/CompoundState" index="8"]
script = ExtResource("9_y2so8")
to = NodePath("../WalkStack/Walk")
event = &"walk"
delay_in_seconds = "0.0"

[node name="ToRun" type="Node" parent="StateChart/CompoundState" index="9"]
script = ExtResource("9_y2so8")
to = NodePath("../WalkStack/Run")
event = &"run"
delay_in_seconds = "0.0"

[node name="ToWAttack" type="Node" parent="StateChart/CompoundState" index="10"]
script = ExtResource("9_y2so8")
to = NodePath("../Attack/WeaponAttack")
event = &"weapon_attack"
delay_in_seconds = "0.0"

[connection signal="area_entered" from="PlayerHurtbox" to="." method="_on_hurt_box_area_entered"]
[connection signal="state_entered" from="StateChart/CompoundState/WalkStack" to="." method="_on_walk_stack_state_entered"]
[connection signal="state_entered" from="StateChart/CompoundState/WalkStack/Walk" to="." method="_on_walk_state_entered"]
[connection signal="state_exited" from="StateChart/CompoundState/WalkStack/Walk" to="." method="_on_walk_state_exited"]
[connection signal="state_entered" from="StateChart/CompoundState/WalkStack/Run" to="." method="_on_run_state_entered"]
[connection signal="state_exited" from="StateChart/CompoundState/WalkStack/Run" to="." method="_on_run_state_exited"]
[connection signal="state_entered" from="StateChart/CompoundState/Attack/WeaponAttack" to="." method="_on_weapon_attack_state_entered"]
[connection signal="state_exited" from="StateChart/CompoundState/Attack/WeaponAttack" to="." method="_on_weapon_attack_state_exited"]
